@@ -589,3 +589,4 @@ FIXED: On Windows, use Unicode/UTF-8 for mkdir().
 	So the replay and screenshots directories can be created within non-ASCII paths.
 FIXED: After quickload, show the room where the prince is, even if the player moved the view away from it (with the H,J,U,N keys).
 FIXED: After quickload, don't draw guard HP if a previously viewed room (with the H,J,U,N keys) had a guard but the current room doesn't have one.
+DONE: Speed up music, sounds, and transitions during fast forwarding.
